2009-XX-XX:
    * version 2.3a1pre
    * add basic plugin authorship documentation
    * plugins may now provide full-fleged ':help' documentation
    * asciidoc is no longer required to build Vimperator
    * the help system is newly modularized

2009-10-28:
    * version 2.2
    * IMPORTANT: Vimperator's licence has changed from the MPL/GPL/LGPL
      tri-license to the MIT license.
    * IMPORTANT: Map.flags has been replaced with individual properties.
      Mappings defined in plugins with mappings.add will need to be updated.
...................................
      E.g.
          mappings.add(...,
              { flags: Mappings.flags.ARGUMENT |
                       Mappings.flags.COUNT |
                       Mappings.flags.MOTION |
                       Mappings.flags.ALLOW_EVENT_ROUTING });
      is now
	   mappings.add(...,
               { arg: true, count: true, motion: true, route: true });
...................................
    * IMPORTANT: shifted key notation now matches Vim's behaviour. E.g. <C-a>
      and <C-A> are equivalent, to map the uppercase character use <C-S-A>.
      (this might change again, as this is REALLY inconsistent, and i don't
       know if I like copying bugs)
    * IMPORTANT: 'popups' now takes a stringlist rather than a number.

    * add [c]:winonly[c]
    * add [c]:tabattach[c]
    * add [c]:keepalt[c]
    * add [c]:styledisable[c], [c]:styleenable[c], and [c]:styletoggle[c]
    * add [c]:sanitize[c], 'sanitizetimespan' and 'sanitizeitems'
    * add [c]:verbose[c]
    * add [c]:window[c] to run a command in a new window
    * add ! version of [c]:delbmarks[c] to delete all bookmarks
    * add [c]:toolbaropen[c], [c]:toolbarclose[c], and [c]:toolbartoggle[c]
    * make [c]:open[c] behavior match that of [c]:tabopen[c] and [c]:winopen[c]
      when no argument is specified
    * add extension related commands - [c]:extadd[c], [c]:extdelete[c],