@@ -1,4 +1,6 @@
 // Copyright (c) 2006-2009 by Martin Stubenschrott <stubenschrott@vimperator.org>
+// Copyright (c) 2007-2009 by Doug Kearns <dougkearns@gmail.com>
+// Copyright (c) 2008-2009 by Kris Maglione <maglione.k at Gmail>
 //
 // This work is licensed for reuse under an MIT license. Details are
 // given in the LICENSE.txt file included with this file.
@@ -802,7 +804,7 @@ const Tabs = Module("tabs", {
                 function () { tabs.keepOnly(tabs.getBrowser().mCurrentTab); },
                 { argCount: "0" });
 
-            commands.add(["tabopen", "t[open]", "tabnew", "tabe[dit]"],
+            commands.add(["tabopen", "t[open]", "tabnew"],
                 "Open one or more URLs in a new tab",
                 function (args) {
                     let special = args.bang;
