@@ -1,4 +1,6 @@
 // Copyright (c) 2006-2009 by Martin Stubenschrott <stubenschrott@vimperator.org>
+// Copyright (c) 2007-2009 by Doug Kearns <dougkearns@gmail.com>
+// Copyright (c) 2008-2009 by Kris Maglione <maglione.k at Gmail>
 //
 // This work is licensed for reuse under an MIT license. Details are
 // given in the LICENSE.txt file included with this file.
@@ -207,7 +209,7 @@ const Config = Module("config", ConfigBase, {
             function () { window.close(); },
             { argCount: "0" });
 
-        commands.add(["wino[pen]", "wo[pen]", "wine[dit]"],
+        commands.add(["wino[pen]", "wo[pen]"],
             "Open one or more URLs in a new window",
             function (args) {
                 args = args.string;
